# Project-Seat

./: .env.example  .gitignore  CLAUDE.md  README.md  dev.py  pyproject.toml
docs/: architecture.mmd  confluence-structure.md  feature-backlog.md  features.md  jira-structure.md  spinup-flow.md  workflow.mmd  workflows.md
project-seat/: .env.example  CLAUDE.md  README.md
samples/API specs/: Meetings.json
samples/confluence/: page-product-development-projects.json
samples/excel/: ANA-PRJ-007- Documentation Run Sheet Drop 2.xlsx
samples/jira/: aim-3295.json  field-definitions.json  field-name-to-id.json  prog-256.json  risk-145.json  risk-versions.json
samples/transcripts/: sample.vtt
scripts/: add_spinup_slide.py  build_presentation.py  create_program_pages.py  seed_burnup.py  seed_drop4_test.py  test_live_claude.py
src/: cache.py  config.py  database.py  jira_constants.py  main.py
src/connectors/: base.py  confluence.py  jira.py  retry.py  zoom.py
src/engine/: agent.py  approval.py  charter_storage_utils.py  mentions.py  orchestrator.py
src/models/: approval.py  ceo_review.py  charter.py  closure.py  dashboard.py  dhf.py  jira.py  knowledge.py  project.py  release.py  transcript.py  zoom.py
src/repositories/: __init__.py  approval_repo.py  charter_repo.py  closure_repo.py  knowledge_repo.py  project_repo.py  release_repo.py  review_repo.py  snapshot_repo.py  transcript_repo.py  zoom_repo.py
src/services/: _transcript_helpers.py  ceo_review.py  charter.py  closure.py  context_resolver.py  dhf.py  (+15 more)
tests/: conftest.py  test_cache.py  test_database.py
(+155 files in other folders)
